# programacion_ia

./: course-manifest.yaml  curriculum.md  informe_desviaciones_curriculum.md  plan_implementacion_agente_materiales_programacion_IA.md
Programacion_IA/: README.md  course-manifest.yaml
Programacion_IA/infraestructura/profesor/: compose.yaml  troubleshooting.md
Programacion_IA/profesorado/: README.md
Programacion_IA/profesorado/programacion_docente/: criterios_evaluacion.md
Programacion_IA/profesorado/scripts/: smoke_test.py
Programacion_IA/profesorado/unidades_didacticas/: UD01_python_profesional.md  UD03_aplicaciones_rag.md  UD04_agentes_inteligentes.md
Programacion_IA/programacion_docente/: mapa_competencias.md  resultados_aprendizaje.md  temporalizacion.md
Programacion_IA/scripts/: smoke_test.py
Programacion_IA/unidades_didacticas/UD01_python_profesional/: 00_indice.md  01_guia_profesor.md  02_material_alumno.md
Programacion_IA/unidades_didacticas/UD01_python_profesional/starter/: pyproject.toml
Programacion_IA/unidades_didacticas/UD01_python_profesional/starter/src/ia_utils/: validator.py
Programacion_IA/unidades_didacticas/UD02_servicios_ia_locales/: 03_presentacion.md  05_practica_guiada.md  (+2 more)
alumnado/: README.md
profesorado/: README.md
profesorado/programacion_docente/: programacion_general.md
profesorado/scripts/: smoke_test.py
profesorado/unidades_didacticas/: UD01_python_profesional.md  UD02_servicios_ia_locales.md  UD03_aplicaciones_rag.md  UD04_agentes_inteligentes.md  UD05_apis_y_despliegue.md  UD06_proyecto_final.md
(+111 files in other folders)
